[package]
name = "raytracer"
version = "0.1.0"
authors = ["Dizzy_D <dizzy_d@sjtu.edu.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
console = "0.15.0"    # console text format
indicatif = "0.16.2" # progress bar
rand = "0.8.3"
threadpool="1.8.1"